syntax = "proto3";

package domain;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "jaytaylor.com/andromeda/domain";

message Package {
  uint64 id = 1 [(gogoproto.customname) = "ID"];
  string name = 2;
  string path = 3;
  string url = 4 [(gogoproto.customname) = "URL"]; // TODO: Rename to Repo, and auto calc the URL if possible..
  string docs_url = 5 [(gogoproto.customname) = "DocsURL"];
  string owner = 6;
  string vcs = 7 [(gogoproto.customname) = "VCS"];
  google.protobuf.Timestamp first_seen_at = 8 [(gogoproto.stdtime) = true];
  map<string, PackageReferences> imported_by = 9; // TODO: Consider making this a type which tracks when the import was first and last seen.
  PackageSnapshot data = 10;
  repeated PackageCrawl history = 11;
}

message PackageReferences {
  repeated PackageReference refs = 1;
}

message PackageReference {
  string path = 1;
  bool active = 2;
  google.protobuf.Timestamp first_seen_at = 3 [(gogoproto.stdtime) = true];
  google.protobuf.Timestamp last_seen_at = 4 [(gogoproto.stdtime) = true];
}

// message SubPackage {
//   string path = 1;
//   string name = 2;
//   map<string, string> imported_by = 3;
// }

// Idea: Perhaps this could simply be inferrred from the crawl history.
//
// message Import {
//   string path = 1;
//   google.protobuf.Timestamp first_seen_at = 2 [(gogoproto.stdtime) = true];
//   google.protobuf.Timestamp last_seen_at = 3 [(gogoproto.stdtime) = true];
//   bool active = 4;
// }

message PackageCrawl {
  google.protobuf.Timestamp job_started_at = 1 [(gogoproto.stdtime) = true];
  google.protobuf.Timestamp job_finished_at = 2 [(gogoproto.stdtime) = true];
  string job_reason = 3;
  bool job_succeeded = 4;
  repeated string job_messages = 5;
  PackageSnapshot data = 6;
}

message PackageSnapshot {
  google.protobuf.Timestamp created_at = 1 [(gogoproto.stdtime) = true];
  string repo = 2;
  map<string, string> sub_packages = 3;
  repeated string imports = 4;
  repeated string test_imports = 5;
  int32 commits = 6;
  int32 branches = 7;
  int32 tags = 8;
  uint64 bytes = 9;
  int32 forks = 10;
  string readme = 11;
  int32 stars = 12;
}
